<resources>
    <string name="app_name">FactoryTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="FactoryTest">Factory Test</string>
    <string name="LongTest">Long Test</string>
    <string name="WriteMac">烧录MAC或SN地址</string>
    <string name="HandWriteMac">Hand Write Mac</string>
    <string name="FactoryReset">Factory Reset</string>
    <string name="btnScan">Scan Again</string>
    <string name="btnWriteMac">Write MAC</string>
    <string name="btnWriteSn">Write SN</string>
    <string name="btnWriteUsid">Write USID</string>
    <string name="SnAddr">Sn Address :</string>
    <string name="UsidAddr">Usid Address :</string>
    <string name="DeviceidAddr">Deviceid Address :</string>
    <string name="TF_Test">TF</string>
    <string name="MCU_Test">MCU</string>
    <string name="AGEING_Test">老化测试</string>
    <string name="SPIFLASH_Test">SPI</string>
    <string name="Gigabit_network_Test">GBE</string>
    <string name="USB1_Test">USB2.0</string>
    <string name="USB2_Test">USB3.0</string>
    <string name="HDMI_Test">I2C_HDMI</string>
    <string name="PD12_Test">Fusb302</string>
    <string name="PD12_Test_Fail">PD1/2 fail</string>
    <string name="PD1_Test_Fail">PD1 fail</string>
    <string name="PD2_Test_Fail">PD2 fail</string>
    <string name="Charge_Test">Charge</string>
    <string name="Gsensor_Test">Gsensor</string>
    <string name="Gyro_Test">Gyro</string>
    <string name="Gesture_Test">Gesture</string>
    <string name="Pcie_Test">SSD</string>
    <string name="Test_Fail">fail</string>
    <string name="Test_In">测试中...</string>
    <string name="Test_Ok">pass</string>
    <string name="btnCvbsVideo">CVBS Video</string>
    <string name="Cvbs_Video">CVBS Video Test</string>
    <string name="Lan_Test">Lan</string>
    <string name="Wifi_Test">Wifi</string>
    <string name="BT_Test">BT</string>
    <string name="Rtc_Test">RTC</string>
    <string name="Hdmi_Test">HDMI</string>
    <string name="DP_Test">DP</string>
    <string name="Led_Test">LED灯是否闪烁?</string>
    <string name="Led_TestIng">Led 测试中</string>
    <string name="PowerKey_Test">Power Key Test</string>
    <string name="PowerKey_TestIng">Power Key Testing</string>
    <string name="KEY_Test">KEY</string>
    <string name="KEY_Test_1_Fail">1-fun:fail</string>
    <string name="KEY_Test_2_Fail">2-power:fail</string>
    <string name="KEY_Test_1_Ok">1-fun:pass</string>
    <string name="KEY_Test_2_Ok">2-power:pass</string>
    <string name="btnHdmi">Hdmi</string>
    <string name="btnLed">Led</string>
    <string name="btnPowerKey">Power Key</string>
    <string name="btnSave">Save Test Result</string>
    <string name="LongTestFinish">Long Test Finish.</string>
    <string name="TestResult">Last Test Result</string>
    <string name="TestResultValue">NULL</string>
    <string name="SaveResult">Save Test Result Success!</string>
    <string name="Mipi_Camera_Test">摄像头测试</string>
    <string name="Mipi_LCD_Test">屏幕纯色检测</string>
    <string name="TP_Test">触摸检测</string>
    <string name="showmac">MAC :</string>
    <string name="showsoftware">software version :</string>
    <string name="lssue_version">lssue version :</string>
    <string name="client_version">software version :</string>
    <string name="showusid">USID :</string>
    <string name="btnEnd">End</string>
    <string name="ScanText">Scan Text :</string>
    <string name="rebootsystem">Reboot</string>
    <string name="ScanError">Scan Error</string>
    <string name="showsn">SN :</string>
    <string name="showdeivceid">DeviceID :</string>
    <string name="TestNotcompleted">hardware test have not completed</string>
    <string name="TestError">hardware test have error item</string>
    <string name="showLength">char</string>
    <string name="showip">以太网IP地址 :</string>
    <string name="showwifimac">Wifi MAC地址 :</string>
    <string name="showwifiip">Wifi IP地址 :</string>
    <string name="s_cpu_thermal">CPU Thermal :</string>
    <string name="s_cpu_freq">CPU Freq :</string>
    <string name="hardware_test_help">pass input ok. fail input mute.</string>
    <string name="long_test_finish">Long Test Finish.</string>
    <string name="check_sdcard_wifi_config">Please check wifi config in udisk.</string>
    <string name="noexist">is no existent</string>
    <string name="exit">请按OK键退出</string>
    <string name="key_exit">请确认如下按键</string>	
    <string name="mcu_version">MCU版本号 :</string>
    <string name="firmware_version">固件版本号 :</string>
    <string name="device_type">设备型号 :</string>
    <string name="mac_check">mac地址校验</string>
    <string name="invalid_mac">  mac地址无效</string>
    <string name="testled">现在信号灯测试，请注意观 察！</string>
    <string name="the_same_mac"> mac地址一致！</string>
   	<string name="the_diff_mac"> mac地址不一致！</string>
    <string name="write_mac_usid"> Mac地址烧录</string>
    <string name="ddr_size"> 内存大小 :</string>
    <string name="nand_size"> 存储容量 :</string>
    <string name="IRKeyTest">红外遥控测试</string>
    <string name="KeyTest">按键测试</string>
    <string name="EnableWol">打开WOL</string>
    <string name="Restore_MCU_settings">复位MCU并截图测试结果到U盘中</string>
    <string name="speaker_MIC">蜂鸣器与麦克风</string>
    <string name="DisableWol">关闭WOL</string>
    <string name="PhoneMictTitle">蜂鸣器与麦克风测试</string>
    <string name="PhoneMicSubTitle">蜂鸣器是否在响？请对麦克风说点什么</string>
    <string name="btnRetest">再次测试</string>
    <string name="btnSkipText">返回</string>
    <string name="InsertSdCard">请插入SD卡！</string>
    <string name="SdCardNospace">SD卡没有空间！</string>
    <string name="HeadsetRecodrSuccess">录音成功，开始回放！</string>
    <string name="RecordError">Record error!</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="r1">R1</string>
    <string name="r2">R2</string>
    <string name="x">x=</string>
    <string name="y">y=</string>
    <string name="left_default">请转动左摇杆</string>
    <string name="right_default">请转动右摇杆</string>
    <string name="down">下</string>
    <string name="up">上</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="button_a">左0</string>
    <string name="button_b">上0</string>
    <string name="button_x">右0</string>
    <string name="button_y">下0</string>
    <string name="button_select">选择</string>
    <string name="button_start">开始</string>
    <string name="vd">音量减</string>
    <string name="vu">音量加</string>
    <string name="f12">按键映射</string>
    <string name="back">返回键</string>
    <string name="home">home</string>
    <string name="cursor">光标</string>
    <string name="menu">菜单</string>
    <string name="mute">静音</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>

</resources>
