<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dip"
        android:layout_height="60dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:text="@string/key_exit"
        android:textColor="@color/black"
        android:textSize="20dip" />

    <Button
        android:id="@id/up"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/right"
        android:layout_alignLeft="@id/down"
        android:layout_centerVertical="true"
        android:text="@string/up" />

    <Button
        android:id="@id/down"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/right"
        android:layout_toRightOf="@id/left"
        android:text="@string/down" />

    <Button
        android:id="@id/left"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/up"
        android:layout_alignLeft="@id/textView"
        android:text="@string/left" />

    <Button
        android:id="@id/right"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/up"
        android:text="@string/right" />

    <Button
        android:id="@id/back"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/down"
        android:layout_alignLeft="@id/textView"
        android:text="@string/back" />

    <Button
        android:id="@id/menu"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/right"
        android:layout_below="@id/right"
        android:layout_alignTop="@id/back"
        android:text="@string/menu" />

    <Button
        android:id="@id/vd"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back"
        android:layout_alignLeft="@id/textView"
        android:text="@string/vd" />

    <Button
        android:id="@id/vu"
        style="@style/key_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/right"
        android:layout_below="@id/right"
        android:layout_alignTop="@id/vd"
        android:text="@string/vu" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_success"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="success" />

        <Button
            android:id="@+id/btn_fail"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="fail" />

    </LinearLayout>

</RelativeLayout>